# assistant

./: index.html  package.json  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  champ_dict.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  handler.rs  lcu.rs  lib.rs  rest.rs  utils.rs
src-tauri/src/lcu/: listener.rs  summoner_types.rs  types.rs  ws.rs
src-tauri/src/utils/: champ_dict.rs  global_key.rs  process.rs  request.rs  tool.rs
src/api/: summoner.ts
src/api/types/: summoner.d.ts
src/assets/: index.css
src/background/: background.ts  gameFlow.ts  index.html
src/background/types/: index.d.ts
src/background/utils/: config.ts  createWindows.ts
src/main/: index.html  index.vue  main.ts  main.vue
src/main/components/: dashboard.vue  setting.vue  sponsor.vue  summonerMasteryChamp.vue
src/main/router/: index.ts
src/main/utils/: theme.ts
src/main/views/home/: index.vue  startGame.vue
src/queryMatch/: index.html  main.ts  main.vue  queryMatch.vue
src/queryMatch/components/: queryHeader.vue  summonerInfoView.vue
src/queryMatch/store/: index.ts
src/resources/: champList.ts
