[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.94.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2.3.1"
tokio = { version = "1.52.0", features = ["full"] }
tauri-plugin-shell = "2.3.5"
sysinfo = "0.38.4"
thiserror = "2.0.18"
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.102"
once_cell = "1.21.4"
